...
              .copy(containerColor = MaterialTheme.colorScheme.background),
      actions = {
        if (canSeeInstants.value) {
          InstantButton(isSelected = instant.value, onToggle = { instant.value = it })
        }
        if (instant.value) {
          IconButton(onClick = onDistanceClick, modifier = Modifier.testTag("distanceButton")) {
            Icon(Icons.Outlined.LocationOn, "Distance")
          }
        }
        // Date picker button
        if (!instant.value) {
          Surface(
              shape = RoundedCornerShape(8.dp),
              modifier = Modifier.clickable { datePickerDialog.show() }.testTag("datePicker"),
              color = MaterialTheme.colorScheme.background) {
                Row(
                    verticalAlignment = Alignment.CenterVertically,
                    modifier = Modifier.padding(horizontal = 8.dp, vertical = 4.dp)) {
                      Icon(
                          Icons.Default.DateRange,
...
                      Text(selectedDate?.format(dateFormatter) ?: "-/-")
                    }
              }
        }

        // Filter button
        IconButton(onClick = onFilterClick, modifier = Modifier.testTag("filterButton")) {
          CustomIcon(
              imageVector = ImageVector.vectorResource(id = R.drawable.baseline_filter_list_alt_24),
              contentDescription = "School Icon")
        }
      })
}
...
        Column(verticalArrangement = Arrangement.spacedBy(16.dp)) {
          Slider(
              value = tempDistance.toFloat(),
              onValueChange = { tempDistance = it.toInt() },
              valueRange = 100f..5100f,
              steps = 49,
              modifier = Modifier.testTag("distanceSlider").padding(horizontal = 16.dp),
              colors =
                  SliderDefaults.colors(
                      activeTrackColor = getColorForDistance(tempDistance, isSystemInDark),
                      thumbColor = getColorForDistance(tempDistance, isSystemInDark)))

          Text(
...
      confirmButton = {
        TextButton(
            onClick = {
              onApply(tempDistance)
              onDismiss()
            },
            modifier = Modifier.testTag("applyButton")) {
              Text("Apply filter")
            }
      },
      dismissButton = { TextButton(onClick = onDismiss) { Text("Close") } })
}

...
