...
              else MaterialTheme.colorScheme.primaryContainer,
          animationSpec = tween(durationMillis = 300, easing = FastOutSlowInEasing),
          label = "contentColor")

  FilledTonalButton(
      onClick = { onToggle(!isSelected) },
      modifier = modifier.size(width = 60.dp, height = 40.dp).testTag("instantToggleButton"),
      enabled = enabled,
      contentPadding = PaddingValues(0.dp),
      colors =
          ButtonDefaults.filledTonalButtonColors(
              containerColor = containerColor,
              contentColor = contentColor,
...
