...
                  .show()
            }
          },
          containerColor = MaterialTheme.colorScheme.primary,
          contentColor = MaterialTheme.colorScheme.onPrimary,
          shape = CircleShape,
          modifier = Modifier.size(56.dp).testTag("middlePlus").align(Alignment.Center)) {
            Icon(
                imageVector = centerItem.icon,
                contentDescription = null,
                modifier = Modifier.size(24.dp).scale(1.2f))
          }
    }
...
